# uestc4006p-gui

./: .gitignore  README.md  pyproject.toml  uestc4006p_gui.spec
cache/image_20260407_162225/: result_meta.json
cache/image_20260407_162353/: result_meta.json
cache/image_20260407_162420/: result_meta.json
cache/image_20260407_162507/: result_meta.json
cache/video_20260407_163354/: result_meta.json
configs/: default_models.yaml
scripts/: build_exe.bat  build_exe.ps1  pyi_rth_runtime.py  qt_smoke_app.py
src/uestc4006p_gui/: __init__.py  app.py
src/uestc4006p_gui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/uestc4006p_gui/__pycache__/: __init__.cpython-311.pyc.1938127012176  __init__.cpython-311.pyc.2669842567152  app.cpython-311.pyc.2669842567152
src/uestc4006p_gui/core/: paths.py  schemas.py  settings.py
src/uestc4006p_gui/core/__pycache__/: __init__.cpython-311.pyc.1938127012608  __init__.cpython-311.pyc.2669842567152  paths.cpython-311.pyc.1938127012752  paths.cpython-311.pyc.2669842567152  schemas.cpython-311.pyc.2669842567152  settings.cpython-311.pyc.2669842567152
src/uestc4006p_gui/inference/: cascade_engine.py  cascade_ops.py  result_writer.py  ultra_bridge.py
src/uestc4006p_gui/inference/__pycache__/: __init__.cpython-311.pyc.1938126777328  __init__.cpython-311.pyc.2669842895408  cascade_engine.cpython-311.pyc.2669842895408  (+3 more)
src/uestc4006p_gui/ui/: i18n.py  main_window.py  worker.py
tests/: test_bridge_import.py
tests/__pycache__/: test_bridge_import.cpython-311-pytest-8.4.2.pyc.38896
(+3 files in other folders)
