[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uestc4006p-gui"
version = "0.1.0"
description = "UESTC4006P GUI MVP for road damage demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "opencv-python>=4.6.0",
    "numpy>=1.23.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
uestc4006p-gui = "uestc4006p_gui.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["uestc4006p_gui", "uestc4006p_gui.*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
